@@ -12,7 +12,7 @@ bootloaders: grub-pc extlinux lilo
 configs:
 
 [relations]
-headers%gcc-4.8: linux-compiler-@version@-x86
+headers%gcc-4.8: linux-compiler-gcc-4.8-x86
 
 [amd64_description]
 hardware: 64-bit PCs
