@@ -12,7 +12,7 @@ kernel-arch: arm
 suggests: fdutils
 
 [relations]
-headers%gcc-4.8: linux-compiler-@version@-arm
+headers%gcc-4.8: linux-compiler-gcc-4.8-arm
 
 [iop32x_build]
 image-file: arch/arm/boot/zImage
