@@ -11,7 +11,7 @@ configs:
  armhf/config
 
 [relations]
-headers%gcc-4.8: linux-compiler-@version@-arm
+headers%gcc-4.8: linux-compiler-gcc-4.8--arm
 
 [armmp_build]
 image-file: arch/arm/boot/zImage
