@@ -8,7 +8,7 @@ bootloaders: s390-tools
 configs: s390x/config
 
 [relations]
-headers%gcc-4.8: linux-compiler-@version@-s390
+headers%gcc-4.8: linux-compiler-gcc-4.8-s390
 
 [s390x_build]
 debug-info: true
