@@ -7,7 +7,7 @@ kernel-arch: s390
 bootloaders: s390-tools
 
 [relations]
-headers%gcc-4.8: linux-compiler-@version@-s390
+headers%gcc-4.8: linux-compiler-gcc-4.8-s390
 
 [s390x_build]
 debug-info: true
